--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build --watch",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
@@ -38,7 +38,7 @@
     "@vuepic/vue-datepicker": "^3.3.1",
     "@vueup/vue-quill": "^1.0.0-beta.8",
     "apexcharts": "^3.35.4",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.8.2",
@@ -64,7 +64,8 @@
     "vue3-google-map": "^0.13.2",
     "vue3-perfect-scrollbar": "^1.6.0",
     "vue3-simple-typeahead": "^1.0.9",
-    "vue3-table-lite": "^1.2.3"
+    "vue3-table-lite": "^1.2.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
