--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@marcoschulte/vue3-progress": "^0.0.6",
     "@popperjs/core": "^2.11.5",
     "@sipec/vue3-tags-input": "^3.0.4",
-    "@vuepic/vue-datepicker": "^3.3.1",
+    "@vuepic/vue-datepicker": "^3.5.3",
     "@vueup/vue-quill": "^1.0.0-beta.8",
     "apexcharts": "^3.35.4",
     "axios": "^1.1.3",
@@ -57,6 +57,7 @@
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-chart-3": "^3.1.8",
+    "vue-contenteditable": "^4.1.0",
     "vue-router": "^4.1.2",
     "vue-select": "^4.0.0-beta.3",
     "vue3-apexcharts": "^1.4.1",
