--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "photoswipe": "^5.3.0",
     "pinia": "^2.0.17",
     "sass": "1.54.0",
+    "v-upload-image": "^1.0.0",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-chart-3": "^3.1.8",
