--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@caohenghu/vue-colorpicker": "^1.2.4",
     "@chenfengyuan/vue-countdown": "^2.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.3.2",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@fortawesome/fontawesome-free": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
@@ -47,6 +49,7 @@
     "jquery": "^3.6.0",
     "jsvectormap": "^1.5.0",
     "lity": "^2.4.1",
+    "lodash": "^4.17.21",
     "maska": "^1.5.0",
     "masonry-layout": "^4.2.2",
     "mitt": "^3.0.0",
