--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue-axios": "^3.4.1",
     "vue-chart-3": "^3.1.8",
     "vue-contenteditable": "^4.1.0",
+    "vue-dragscroll": "^4.0.5",
     "vue-router": "^4.1.2",
     "vue-select": "^4.0.0-beta.3",
     "vue3-apexcharts": "^1.4.1",
