--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_PERPAGE=10
-API_URL=http://localhost:3005
-S3_URL=http://localhost:9000
+VITE_API_URL=http://localhost:3005
+VITE_S3_URL=http://localhost:9000
